wescamp.py: Update from add-on server

--- a/For_Power/multiplayer/Seeking_evil.cfg
+++ b/For_Power/multiplayer/Seeking_evil.cfg
@@ -47,7 +47,7 @@ This is a relatively short scenario."
     y=26-31,26,25,24,23
     {UNDERGROUND}
   [/time_area]
-  allow_modification=plan_your_advancements
+  allow_modification=plan_your_advancements,Automatic_End_turn
   
   [side]
     side=1
