--- a/For_Power/scenarios/04_Return.cfg
+++ b/For_Power/scenarios/04_Return.cfg
@@ -228,7 +228,7 @@
       amount=$glacyn_gold
     [/gold]
 		[objectives]
-      side=1,5
+			side=1,5
 			[objective]
 				description= _ "Defeat all enemy leaders"
 				condition=win
@@ -252,11 +252,11 @@
     {SET_TERRAIN 44 29 Ce}
 		[message]
 			speaker=Lemyr
-			message=_"We have arrived, but this is not good news. The orcs have crossed the river!"
+			message=_"We have arrived, but this is not good news. The orcs have crossed the river! And it is even worse - their strongest warriors besieged our keep! They are standing above dead corpses of many of our militiamen. I worry that we have arrived too late to save my village."
 		[/message]
 		[message]
 			speaker=Rheran
-			message=_"Worry not. My riders shall eliminate the orcs this side of the river, then we shall drive them back!"
+			message=_"Worry not, young knight. My riders shall eliminate the orcs this side of the river, then we shall drive them back! Your fellows will survive."
 		[/message]
 		[message]
 			speaker=Rheran
@@ -292,7 +292,7 @@
 		{ATTACK_AND_KILL rider4 21 30 melee}
     [message]
 			speaker=Glacyn
-			message=_"I thank you, Sir Lemyr, for bringing us reinforcments."
+			message=_"I thank you, Sir Lemyr, for bringing us reinforcements. We were already giving up on hope that we could keep our lives."
 		[/message]
 		[message]
 			speaker=Lemyr
@@ -363,7 +363,7 @@
 		[/message]
 		[message]
 			speaker=Glacyn
-			message=_"Give my thanks to the Earl."
+			message=_"Agreed. But we shall not forgot to show our gratidute to our savior. Lieutenant, give my thanks to the Earl."
 		[/message]
 		[message]
 			speaker=Rheran
@@ -380,7 +380,7 @@
 		[/message]
 		[message]
 			speaker=Lemyr
-			message=_"And I am glad to be back."
+			message=_"And I am also glad to be back."
 		[/message]
 		[message]
 			speaker=Clare
