--- a/For_Power/scenarios/05_A_Mage.cfg
+++ b/For_Power/scenarios/05_A_Mage.cfg
@@ -272,7 +272,7 @@
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"But... How? Who could have done such a thing?"
+		  message=_"But... How? And who could have done such a thing?"
 		[/message]
     [message]
 		  speaker=guard
@@ -286,9 +286,13 @@
 		  speaker=guard
 		  message=_"I’m sorry, ma’am, but we need every guard to defend the village."
 		[/message]
-		[message]
-		  speaker=Lemyr
-		  message=_"Clare, I am afraid that we must part ways again. Good luck in the search. Give the orc my hate, and that of the entire village."
+    [message]
+      speaker=Clare
+      message=_"Oh, yes, now when Glacyn is no longer among us the orcs will again attempt to raid our village for sure. So it seems that it is upon me to find that accursed orc who dared to do such a horrible thing and bring the justice to him. But you Lemyr will follow me on my mission, right?"
+    [/message]
+    [message]
+      speaker=Lemyr
+      message=_"I would really love to, my dearest friend but I feel that my place is here. I shall stay and replace Glacyn on his position. I was not officialy appointed to it yet but I am pretty that I will be. So sadly we must part ways again. Good luck in the search. Give the orc my hate, and that of the entire village."
 		[/message]
 		[message]
 		  speaker=Clare
@@ -296,7 +300,7 @@
 		[/message]
 		[message]
 		  speaker=Lemyr
-		  message=_"So do I, Clare."
+		  message=_"So do I, my ... friend."
 		[/message]
 		# Lemyr stays in the village
 		{MODIFY_UNIT id=Lemyr side 2}
