--- a/For_Power/scenarios/07_Searching_The_Mage.cfg
+++ b/For_Power/scenarios/07_Searching_The_Mage.cfg
@@ -294,6 +294,27 @@
     [/modify_side]
   [/event]
   
+  {ON_SIGHTING () 1 side=3 (
+    [scroll_to_unit]
+      id=second_unit.id
+    [/scroll_to_unit]
+    [delay]
+      time=500
+    [/delay]
+    [message]
+      speaker=Tinry
+      message=_"Aaaahhh! Some monsters just emerged from the deep water! The rumours were true. They'll drown us!"
+    [/message]
+    [message]
+      speaker=Merissa
+      message=_"Tinry, you scaredy-cat! You forgot we're pretty quick so we can avoid them but if they dare to attack us I'm sure your guys could handle them. These creatures aren't so strong ... I think."
+    [/message]
+    [message]
+      speaker=Tinry
+      message=_"Ah, alright, alrigh. Let's go smite them, guys."
+    [/message]
+  )}
+  
   [event]
     name=moveto
     [filter]
@@ -303,7 +324,11 @@
     [/filter]
     [message]
       speaker=unit
-      message= _ "I can feel the remnants of magic in the air. We have arrived."
+      message= _ "I can feel the remnants of magic in the air. We have arrived. Well, thank you for your help, people, I could not get here without your help. But what is ahead is just for me. Wait for me here, I shall be back soon."
+    [/message]
+    [message]
+      speaker=Tinry
+      message=_"Yes, ma'am!"
     [/message]
     [endlevel]
 		  result=victory
