--- a/For_Power/scenarios/09a_Bandits.cfg
+++ b/For_Power/scenarios/09a_Bandits.cfg
@@ -48,9 +48,58 @@
 	  {GENERIC_UNIT 2 Thug 8 10}
 	[/side]
 	
+  [event]
+    name=prestart
+	  {RECALL_HEROES2}
+    [hide_unit]
+      side=1
+    [/hide_unit]
+    [message]
+      speaker=Merissa
+      message=_"Hey, Tinry! Someone's coming out of the cave. Go to check who's that."
+    [/message]
+    [message]
+      speaker=Tinry
+      message=_"Yeah, I'm going ... Looks like a girl. I think it's Clare."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"Yes, Tinry, it is me. I am back."
+    [/message]
+    [message]
+      speaker=Merissa
+      message=_"Hmmm, that was somehow quick. Tell me what happend."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"You were right, Haldar was evil, you were right. But what can i do now? I sense that accursed orc. He may be just a few days of walking from us but he is hiding in an orcish city. It is protected by dozens of other orcs. I cannot crush such a big force just at my own. Could you help me one more time, please?"
+    [/message]
+    [message]
+      speaker=Tinry
+      message=_"Well, no. Sorry but we're too few to attack a city."
+    [/message]
+    [message]
+      speaker=Merissa
+      message=_"But we know someone who could help you. But you won't like him either I fear. He's a well known highwayman. He killed many men of law chasing just alone. But also he's gathered a quite bigger group of guys as tough and strong as him. His name is Mubryn. His band could make what you need."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"Can you show me where he lives? "
+    [/message]
+    [message]
+      speaker=Merissa
+      message=_"Sure, we'll accompany you!"
+    [/message]
+    [delay]
+      time=2000
+    [/delay]
+  [/event]
+  
 	[event]
 	  name=start
-	  {RECALL_HEROES2}
+    [unhide_unit]
+      side=1
+    [/unhide_unit]
 	  [message]
 	    speaker=Tinry
 	    message=_"Hi, Mubryn."
