--- a/For_Power/scenarios/18a_The_Last_battle.cfg
+++ b/For_Power/scenarios/18a_The_Last_battle.cfg
@@ -116,7 +116,7 @@
 		recruit=Orcish Warrior,Orcish Crossbowman
 
 		{FLAG_VARIANT ragged}
-		{GOLD 100 120 140}
+		{GOLD 150 170 190}
 		{INCOME 5 7 8}
 		
 		{GENERIC_UNIT 4 (Orcish Warrior) 4 4}
@@ -138,7 +138,7 @@
 		recruit=Orcish Grunt,Orcish Warrior,Orcish Archer,Wolf Rider
 
 		{FLAG_VARIANT ragged}
-		{GOLD 130 140 155}
+		{GOLD 180 190 205}
 		{INCOME 6 8 11}
 		
 		{GENERIC_UNIT 5 (Wolf Rider) 7 13}
@@ -161,7 +161,7 @@
 		recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Troll,Ogre
 
 		{FLAG_VARIANT ragged}
-		{GOLD 140 150 165}
+		{GOLD 180 190 205}
 		{INCOME 6 8 11}
 		
 		{GENERIC_UNIT 6 Troll 18 4}
@@ -211,8 +211,8 @@
     {CAPTURE_VILLAGE 3 27 19}
     {CAPTURE_VILLAGE 3 27 22}
     [message]
-	    id=Clare
-	    message=_"We are here, sir. And we bring some soldiers and mages with us."
+	    speaker=Clare
+	    message=_"We have arrived as you ordered, earl Menvan. And we bring some soldiers and mages with us."
 	  [/message]
 	  [message]
 			speaker=earl
@@ -224,11 +224,11 @@
 		[/message]
 		[message]
 			speaker=earl
-			message=_"I fear that we can't defeat them. We are outnumbered."
+			message=_"I fear that we can't defeat them. We are outnumbered. And these orcs aren't the weaklings we usually fight. They are just strong as my finest warriors, maybe even stronger. And it seems they have also some tough trolls and ogres with them."
 		[/message]
 		[message]
-	    id=Clare
-	    message=_"In that case we must kill the sovereign and hope that they will fight among themselves and we will defeat them easily."
+	    speaker=Clare
+	    message=_"I see. In that case we must kill the sovereign and hope that they will fight among themselves and we will defeat them easily."
 	  [/message]
 	  [scroll_to_unit]
 	    id=orcleader
@@ -238,7 +238,7 @@
 			message=_"Can you see his guards? It won't be easy."
 		[/message]
 		[message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"Yes but I can teleport myself. I could get close to him and kill him quickly."
 	  [/message]
 	  [message]
@@ -250,7 +250,7 @@
 			message=_"It's dangerous but it may be our only chance. We will try to clear the road and you will sneak up on him."
 		[/message]
 		[message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"I agree."
 	  [/message]
 	  [message]
