--- a/For_Power/scenarios/18b_The_Truth.cfg
+++ b/For_Power/scenarios/18b_The_Truth.cfg
@@ -126,7 +126,7 @@
 		[/role]
 		[message]
 			role=reporter
-			message=_"Oh no. There are the orcs again, Lemyr."
+			message=_"Oh no. There are the orcs again, Lemyr. It seems our peace time came to its end."
 		[/message]
 		[message]
 			speaker=Lemyr
@@ -153,7 +153,7 @@
 			message=_"She is not a necromancer, orc. She would never do such things."
 		[/message]
 		[message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"Lemyr, they do not tell lies. I needed to be a necromancer to defeat the orc. But I have not interupted the rest of any dead for weeks. I have abandoned this terrible art."
 	  [/message]
 	  [message]
