--- a/For_Power/scenarios2/01_Return_of_troubles.cfg
+++ b/For_Power/scenarios2/01_Return_of_troubles.cfg
@@ -19,7 +19,7 @@
 		side=1
 		controller=human
 		team_name=good
-    user_team_name= _ "Living beings"
+    user_team_name= _ "Mages"
 
 		type=Clare_Lich
 		id=Clare
@@ -42,7 +42,7 @@
 		side=2
 		controller=ai
 		team_name=good
-    user_team_name= _ "Living beings"
+    user_team_name= _ "Elves"
 
 		type=Elvish Lord
 		id=Gaeril
@@ -52,7 +52,7 @@
 		recruit=Elvish Archer,Elvish Fighter,Elvish Shaman
 		
 		{FLAG_VARIANT wood-elvish}
-		{GOLD 100 90 70}
+		{GOLD 85 80 70}
 		{INCOME 5 3 0}
 		
 		[ai]
@@ -108,7 +108,7 @@
           from_global=chapter_1_transfer_store
           to_local=transfer_store
         [/get_global_variable]
-        {VARIABLE transfer_store.unit.x 26}
+        {VARIABLE transfer_store.unit.x 10}
         {VARIABLE transfer_store.unit.y 30}
         [unstore_unit]
           variable=transfer_store.unit
@@ -200,23 +200,26 @@
   
   [event]
     name=start
-    {CAPTURE_VILLAGE 1 22 32}
-    {CAPTURE_VILLAGE 1 27 33}
-    {CAPTURE_VILLAGE 1 29 31}
-    {CAPTURE_VILLAGE 2 28 2}
-    {CAPTURE_VILLAGE 2 25 3}
-    {CAPTURE_VILLAGE 2 25 4}
-    {CAPTURE_VILLAGE 2 29 5}
-    {CAPTURE_VILLAGE 3 41 13}
-    {CAPTURE_VILLAGE 3 42 15}
-    {CAPTURE_VILLAGE 3 39 16}
+    {CAPTURE_VILLAGE 1 6 32}
+    {CAPTURE_VILLAGE 1 11 33}
+    {CAPTURE_VILLAGE 1 13 31}
+    {CAPTURE_VILLAGE 2 12 2}
+    {CAPTURE_VILLAGE 2 9 3}
+    {CAPTURE_VILLAGE 2 19 5}
+    {CAPTURE_VILLAGE 3 25 13}
+    {CAPTURE_VILLAGE 3 26 15}
+    {CAPTURE_VILLAGE 3 23 16}
+    [message]
+      speaker=Clare
+      message=_"Ah, I am so tired of walking, I need to rest for a while. But where? Everything what I can see around is just a flat land. It would not have to be necessary uncomfortable but I do not know what perils could appear when I close my eyes. I would feel safer among some people. Hm, wait. I can see a forest in not so long distance and it seems to be inhabited by elves. They may let me rest in their village."
+    [/message]
     [message]
       speaker=Clare
       message=_"Hail, elves. May I rest in your village?"
     [/message]
     [message]
       speaker=Gaeril
-      message=_"You must be Clare. We've heard about you."
+      message=_"You must be Clare. We have heard about you."
     [/message]
     [message]
       speaker=Clare
@@ -224,11 +227,11 @@
     [/message]
     [message]
       speaker=Gaeril
-      message=_"Yes, you can rest here but we have some troubles. You could help us."
+      message=_"Well, you are welcome here but we are having some troubles. Would you mind helping us to deal with them?"
     [/message]
     [message]
       speaker=Clare
-      message=_"I will help you. What is the problem?"
+      message=_"Not at all. I will gladly help you. What is that what troubles you?"
     [/message]
     [message]
       speaker=Gaeril
