--- a/For_Power/scenarios5/08_Avenger.cfg
+++ b/For_Power/scenarios5/08_Avenger.cfg
@@ -21,37 +21,37 @@
 	name=_"Avenger"
 	next_scenario=09_Cleaning_home
 	map_data="{~add-ons/For_Power/maps/08_Avenger.map}"
-	turns=375
+	turns=48
   carryover_percentage=40
-  carryover_add=true
+  carryover_add=false
   {SCENARIO_MUSIC weight_of_revenge.ogg}
   {EXTRA_SCENARIO_MUSIC legends_of_the_north.ogg}
   {EXTRA_SCENARIO_MUSIC northerners.ogg}
   {EXTRA_SCENARIO_MUSIC into_the_shadows.ogg}
-  {AFTERNOON_HOUR6}
-  {DUSK_HOUR}
-  {FIRST_WATCH_HOUR1}
-  {FIRST_WATCH_HOUR2}
-  {FIRST_WATCH_HOUR3}
-  {FIRST_WATCH_HOUR4}
-  {MIDNIGHT_HOUR}
-  {SECOND_WATCH_HOUR1}
-  {SECOND_WATCH_HOUR2}
-  {SECOND_WATCH_HOUR3}
-  {SECOND_WATCH_HOUR4}
-  {SECOND_WATCH_HOUR5}
-  {SECOND_WATCH_HOUR6}
-  {DAWN_HOUR}
-  {MORNING_HOUR1}
-  {MORNING_HOUR2}
-  {MORNING_HOUR3}
-  {MORNING_HOUR4}
-  {MIDDAY_HOUR}
-  {AFTERNOON_HOUR1}
-  {AFTERNOON_HOUR2}
-  {AFTERNOON_HOUR3}
-  {AFTERNOON_HOUR4}
-  {AFTERNOON_HOUR5}
+  {AFTERNOON}
+  {DUSK}
+  {FIRST_WATCH}
+  {FIRST_WATCH}
+  {FIRST_WATCH}
+  {FIRST_WATCH}
+  {SECOND_WATCH}
+  {SECOND_WATCH}
+  {SECOND_WATCH}
+  {SECOND_WATCH}
+  {SECOND_WATCH}
+  {SECOND_WATCH}
+  {SECOND_WATCH}
+  {DAWN}
+  {MORNING}
+  {MORNING}
+  {MORNING}
+  {MORNING}
+  {AFTERNOON}
+  {AFTERNOON}
+  {AFTERNOON}
+  {AFTERNOON}
+  {AFTERNOON}
+  {AFTERNOON}
   
   [side]
 		side=1
@@ -92,7 +92,7 @@
     recruit=Draug,Bonebow,Spectre,Necromancer
     
     {FLAG_VARIANT undead}
-    gold=1000
+    gold=1000 # she will get more gold on start depending on player's carried over gold
     {INCOME 0 1 2}
     
     [ai]
@@ -148,9 +148,6 @@
           [/have_unit]
         [/show_if]
 	    [/objective]
-      [note]
-        description= _ "This scenario uses 24 hours schedule unlike the rest."
-      [/note]
       {TURNS_RUN_OUT}
 			[gold_carryover]
 				bonus=no
@@ -165,6 +162,10 @@
       side=1
       variable=players_gold
     [/store_gold]
+    [set_variable]
+      name=players_gold
+      {QUANTITY sub 250 235 210}
+    [/set_variable]
     {VARIABLE_OP players_gold divide 100}
     [set_variable]
       name=players_gold
@@ -257,7 +258,7 @@
       [/variable]
     [/filter_condition]
     [fire_event]
-      name=older_jollas_arrival
+      name=older_jollas_early_arrival
     [/fire_event]
   [/event]
   
@@ -270,7 +271,7 @@
       [/variable]
     [/filter_condition]
     [fire_event]
-      name=older_jollas_arrival
+      name=older_jollas_early_arrival
     [/fire_event]
   [/event]
   
@@ -283,7 +284,7 @@
       [/variable]
     [/filter_condition]
     [fire_event]
-      name=older_jollas_arrival
+      name=older_jollas_early_arrival
     [/fire_event]
   [/event]
   
@@ -296,13 +297,40 @@
       [/variable]
     [/filter_condition]
     [fire_event]
-      name=older_jollas_arrival
+      name=older_jollas_early_arrival
     [/fire_event]
   [/event]
   
   [event]
+    name=older_jollas_early_arrival
+    [fire_event]
+      name=older_jollas_arrival
+    [/fire_event]
+    [message]
+      speaker=Clare
+      message=_"Who goes there? ... Jolla? Is it you? Thanks to gods!"
+    [/message]
+    [message]
+      speaker=olderJolla
+      message=_"Yes, it is me, Clare. But can you tell me what is going on here? I thought that you all are already back at your place."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"Well, we were heading there but that woman crossed our way. She wants to make us pay for that we have destroyed that lich Ganesha who was closed to her heart. Anyway, she is just one among many. Her group craves to do horrible things, we have to stop them ... well, just her for now as the others are not going to show up themselves. But she is very powerful and it seems that she commands endless legions of undead and I am not sure if we could be able to defeat her without your help. Well, if you want to do so ..."
+    [/message]
+    [message]
+      speaker=olderJolla
+      message=_"Of course that I am going to help you, my friend. I have no reason to refuse to aid you as she is my enemy as well according to what you have just said to me."
+    [/message]
+    [message]
+      speaker=Shyama
+      message=_"Who is that? Another do-gooder wishing to kill me? It doesn't matter anyway, I'll do deal with all of you quickly."
+    [/message]
+  [/event]
+  
+  [event]
     name=older_jollas_arrival
-    # show up, move, set up camp and have some talk
+    # show up, move, set up camp
     [unstore_unit]
       variable=older_jollas_store
       x,y=15,1
@@ -370,6 +398,7 @@
     {LOYAL_PALADIN 32 15}
     {LOYAL_PALADIN 32 16}
     {LOYAL_PALADIN 33 17}
+    {LOYAL_PALADIN 34 15}
     [message]
       speaker=Bhaskara
       message=_"We have finally found you, fiend! It took us several years but now we can finally send you to the fiery wastelands of Urvatha and fulfil the God's will. Men, slay her!"
@@ -429,6 +458,237 @@
   [event]
     name=last breath
     [filter]
+      id=Shyama
+    [/filter]
+    [message]
+      speaker=unit
+      message=_"How is this possible?! ... Well, at least we'll be together, Ganesha. But you, Clare, ... I know everything about you ... your life story has been already written and you can't change it. You'll join us in the end ..."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"What do you mean with it? ..."
+    [/message]
+    [message]
+      speaker=narrator
+      message=_"The necromancer was about to say something but her lips refused to work any longer, she was dying. Her hair became as black as the death itself, as well as her face. But she had smile on her face because she was to reunite with someone who was close to her. She did not realise at all that her body was falling to the cold ground. In her mind, she was already with her friend. After a few seconds, she has breathed her last."
+    [/message]
+  [/event]
+  
+  [event]
+    name=victory
+    [message]
+      speaker=Clare
+      message=_"Speak! Speak! I want to know it!"
+    [/message]
+    [message]
+      speaker=Lemyr
+      message=_"Clare, she cannot say anything anymore. Her soul has left this world for good."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"It is no complication for me at all. I am able to drag her back to our world to hear what I long to know."
+    [/message]
+    [message]
+      speaker=Jolla
+      message=_"You really can? ... Well, I should not be so surprised by it. You did it to yourself. I just ..."
+    [/message]
+    [message]
+      speaker=Lemyr
+      message=_"But the question is if you really want to do such a thing. I was in belief that you want to have nothing to do with this horrible art anymore."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"That is what I thought as well but ... I do not know what is wrong with me. Well, but after thinking about her last words for a while I think that she could mean that once I will join the dark side. It is possible, anger and hatred burn my soul for so long. I am falling ..."
+    [/message]
+    [message]
+      speaker=Amiwen
+      message=_"We are not going to let you fall to the darkness. We will help you fight it. You can overcome it, you can be again so good person as you once were."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"I am not so sure about it ..."
+    [/message]
+    [message]
+      speaker=Lemyr
+      message=_"Of course you can, Clare! ... Well, with our help. You know that we all will be by your side until the end of our days. We are not going to leave you, especially at your hour of need."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"... Thank you very much. It is so nice to hear it, really. I may not give up now."
+    [/message]
+    [message]
+      speaker=Lemyr
+      message=_"You are welcome."
+    [/message]
+    [if]
+      [have_unit]
+        id=olderJolla
+      [/have_unit]
+      [else]
+        [fire_event]
+          name=older_jollas_arrival
+        [/fire_event]
+        [message]
+          speaker=olderJolla
+          message=_"Oh, I catched you finally. But this place is not your home, is it? So what was going on here? I can smell ... death."
+        [/message]
+        [message]
+          speaker=Bhaskara
+          message=_"You smell it right, sister. Many a man lost their lives at this place, not only recently but over centuries too. I was told, by the Lord, that this place attracted dark archons since time immemorial. I know not why but that is not important. Now, forces of light and darkness clashed here once again. The enemy appeared to be a worthy opponent for my men but we were victourious in the end with help of these people which you seem to know."
+        [/message]
+        [message]
+          speaker=olderJolla
+          message=_"Well, not so much. I used to know just one of them and when we were younger. I met her again just a few days ago and I was a bit suprised how she changed. But where are my good manners, I forgot to introduce myself. I am Jolla."
+        [/message]
+        [message]
+          speaker=Bhaskara
+          message=_"And my name is Bhaskara. I am pleased to meet you but unfortunately I have not got time to talk to you."
+        [/message]
+      [/else]
+    [/if]
+    [message]
+      speaker=Bhaskara
+      message=_"So, the enemy have been vanquished finally. Thank you for your help, people, she was a bit more powerful than I expected. But now I have to return to my land so farewell."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"For your help?! We did ..."
+    [/message]
+    [message]
+      speaker=olderJolla
+      message={WHISPER _"Clare, my friend, let him believe that it was you who helped him. He just cannot accept that he was helping someone like you. Not that I blame him ..."}
+    [/message]
+    [message]
+      speaker=olderJolla
+      message=_"We were glad that we could be of help to you, brother. May the lords of light guide your path."
+    [/message]
+    [message]
+      speaker=Bhaskara
+      message=_"Yours too, sister, yours too."
+    [/message]
+    {MOVE_UNIT id=Bhaskara 35 17}
+    [kill]
+      id=Bhaskara
+      animate=no
+    [/kill]
+    [if]
+      [have_unit]
+        side=3
+      [/have_unit]
+      [then]
+        [store_unit]
+          [filter]
+            side=3
+          [/filter]
+          variable=temp_store
+          kill=no
+        [/store_unit]
+        {FOREACH temp_store i}
+        {MOVE_UNIT id=$temp_store[$i].id 35 17}
+        [kill]
+          id=$temp_store[$i].id
+          animate=no
+        [/kill]
+        {NEXT i}
+        {CLEAR_VARIABLE temp_store}
+      [/then]
+    [/if]
+    [message]
+      speaker=Amiwen
+      message=_"Well, I suppose that it is the time for us to return home too. We still have one fight before us and after that our deserved rest ... for some time."
+    [/message]
+    [message]
+      speaker=Jolla
+      message=_"Oh, yes! I forgot about that battle we have to go through. Well but I believe that you will love that place as well, Jolla."
+    [/message]
+    [message]
+      speaker=olderJolla
+      message=_"May be but whoever are you going to face I am ready for them. Let us go ahead, do not waste more time here."
+    [/message]
+  [/event]
+  
+  [event]
+    name=last breath
+    [filter]
+      side=3
+      canrecruit=no
+    [/filter]
+    [message]
+      speaker=Bhaskara
+      message=_"$unit.name, fear not of what is to come. You were a good and brave man who loyally served to the God. He will warmly welcome you in his halls."
+    [/message]
+    [message]
+      speaker=unit
+      message=_"Thank you. This is what I needed to hear. And also that this devil will go where she belongs as well."
+    [/message]
+    [message]
+      speaker=Bhaskara
+      message=_"I may assure you, my friend that no one of us will rest until we do so."
+    [/message]
+    [message]
+      speaker=unit
+      message=_"Good. Now I may leave this world in peace."
+    [/message]
+  [/event]
+  
+  [event]
+    name=die
+    [filter]
+      side=3
+      canrecruit=no
+    [/filter]
+    [filter_condition]
+      [have_unit]
+        side=3
+        canrecruit=no
+        count=0
+      [/have_unit]
+    [/filter_condition]
+    [message]
+      speaker=Shyama
+      message=_"All of your men have fallen to us, Bhaskara. Can you see it now? You never had a real chance to defeat us. Maybe it's the time for you to finally acknowledge it and leave me for all."
+    [/message]
+    [message]
+      speaker=Bhaskara
+      message=_"Never! I will fight until the end, your end. Lord, bless your Chosen one."
+    [/message]
+    {ADVANCE_UNIT id=Bhaskara Prophet}
+    [object]
+      [filter]
+        id=Bhaskara
+      [/filter]
+      [effect]
+        apply_to=new_ability
+        [abilities]
+          {ABILITY_REGENERATES}
+          {ABILITY_STEADFAST}
+        [/abilities]
+      [/effect]
+      [effect]
+        apply_to=attack
+        name=sword
+        increase_damage=2
+      [/effect]
+      [effect]
+        apply_to=attack
+        name=lightbeam
+        increase_attacks=1
+        remove_specials=marksman
+        [set_specials]
+          mode=append
+          {WEAPON_SPECIAL_MAGICAL}
+        [/set_specials]
+      [/effect]
+    [/object]
+    [message]
+      speaker=Bhaskara
+      message=_"Urvatha awaits your foul soul, devil."
+    [/message]
+  [/event]
+  
+  [event]
+    name=last breath
+    [filter]
       id=Bhaskara
     [/filter]
     [message]
@@ -451,6 +711,10 @@
   
   [event]
     name=time over
+    [message]
+      speaker=Shyama
+      message=_"You have fought pretty well but you're no challenge for the power of dark lords. Your soldiers still have the will to fight but I can break it very easily."
+    [/message]
     [sound]
       name=lightning.ogg
     [/sound]
