--- a/For_Power/scenarios/02_Flight.cfg
+++ b/For_Power/scenarios/02_Flight.cfg
@@ -135,7 +135,7 @@
 		name=start
 		[message]
 			speaker=Lemyr
-			message=_"NO! More orcs are coming."
+			message=_"What is that what I can see in distance? No! More orcs are coming."
 		[/message]
 		[message]
 			speaker=Glacyn
