--- a/For_Power/scenarios/09b_Learning_Dark_Arts.cfg
+++ b/For_Power/scenarios/09b_Learning_Dark_Arts.cfg
@@ -124,7 +124,7 @@
 	  {PLACE_IMAGE items/bones.png 3 14}
 	  [message]
 		  speaker=Haldar
-		  message=_"You are a great apprentice, Clare. I am proud of you."
+		  message=_"You are a great apprentice, Clare, you learn very quickly. I am proud of you."
 		[/message]
 		[message]
 		  speaker=Clare
@@ -132,7 +132,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Alas this is only a begining. Your true power is not in you but in your minions."
+		  message=_"Alas this is only a begining. You learnt a few useful spells but your true power is not in you but in your minions."
 		[/message]
 		[message]
 		  speaker=Clare
@@ -140,7 +140,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"This is only a weak example of the path you chose. There are also skeletons, revenants and even ghosts."
+		  message=_"This is only a weak example of the path you chose. A master of necromancy has much stronger minions under his command: skeletons, revenants and even ghosts."
 		[/message]
 		[message]
 		  speaker=Haldar
@@ -198,7 +198,7 @@
 	  [/filter]
 	  [message]
 		  speaker=Haldar
-		  message=_"No, they are not for you, only for your minions!"
+		  message=_"No, they are not for you, only for your minions! Summoning them is quite easy but you need to learn to command them properly too."
 		[/message]
 		[message]
 		  speaker=Clare
