--- a/For_Power/scenarios/15a_Back_Home.cfg
+++ b/For_Power/scenarios/15a_Back_Home.cfg
@@ -64,28 +64,48 @@
 	  name=start
 	  {RECALL_HEROES2}
 	  [message]
-	    id=Clare
-	    message=_"It is good to be back home. I can even see Lemyr."
+	    speaker=Clare
+	    message=_"Ah, it is so good to be back home. I really missed this place. Let us see how it looks here now like. Well, every building is at the same place and in the same state as I remember so the orcs probably have not attacked the village in my absence. And there, at the fields are some children playing. That reminds me of me and Lemyr playing there before I left our village to go to study magic arts. And when I am thinking of him - where he is? I would like to ... say hello to him and tell that I succeeded in my mission."
 	  [/message]
+    [message]
+      speaker=Tinry
+      message=_"Who is that Lemyr you're talking about? ... If I can ask ..."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"My closest friend. I know him since my childhood. He has been so righteous and kind since I remember. Almost everyone liked him. But he was a bit shy and not so talkative so he did not have so much friends. A few days before I left our village he have been knighted and after Gl ... Glacyn have been killed he is probably in charge of our village."
+    [/message]
+    [message]
+      speaker=Tinry
+      message={WHISPER _"Hm, with someone like him around, I don't think she could think of me. Compared to him, I'm nobody. At least nobody she could like."}
+    [/message]
+    [message]
+      speaker=Merissa
+      message=_"I can see someone looking like a knight in front of some old keep, Clare. Hmm, but when I look better at him his clothing seems somehow poor and it's white and blue. He doesn't look like knights I have heard about. But he may be a paladin. Anyhow is that your friend?"
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"Yes, it is him! I am so glad to see him again. I am going to go to greet him."
+    [/message]
 	  [move_unit]
 		  id=Clare
 		  to_x=10
 		  to_y=24
 		[/move_unit]
 	  [message]
-	    id=Clare
-	    message=_"Hi, Lemyr. I am back. I slew the orc."
+	    speaker=Clare
+	    message=_"Lemyr! Hello! It is me, Clare. I am back. I slew the orc."
 	  [/message]
 	  [message]
-	    id=Lemyr
-	    message=_"It is a great news, Clare. I missed you. But what are these bandits doing here?"
+	    speaker=Lemyr
+	    message=_"Clare! Welcome back. I missed you. Well, it is a great news what you bring to me. Now, our beloved Glacyn can rest in peace. But can we talk about those bandits? It seems that they came with you. Do you know them? And what are they doing around our village?"
 	  [/message]
 	  [message]
-	    id=Clare
-	    message=_"They helped me defeat him and by the way conquer an orcish city. Do not fight them."
+	    speaker=Clare
+	    message=_"They helped me to get to that accursed orc. He was hiding in one orcish city so we had to capture it first. Please, do not fight them."
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"If you say so. They can enter the village."
 	  [/message]
 	  [move_unit]
@@ -104,19 +124,15 @@
 		  to_y=24
 		[/move_unit]
 	  [message]
-	    id=Clare
-	    message=_"Thank you. But now tell me what happended here."
+	    speaker=Clare
+	    message=_"Thank you. But now tell me what happended in our village during my absence."
 	  [/message]
 	  [message]
-	    id=Lemyr
-	    message=_"Nothing interested. You know it. This is a small village. But it is a place of justice and law again."
+	    speaker=Lemyr
+	    message=_"Nothing interested. You know it. This is a small village. But it is a place of peace and justice again. There have been no more assassinations here. Also for a reason, the orcs did not attemp to attack us again. But no one of us mind it. We are happy for some time when we do not have to fight."
 	  [/message]
 	  [message]
-	    id=Lemyr
-	    message=_"There have been no more assassinations here."
-	  [/message]
-	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"You did a great job. I am proud of you. Come to me. I want to hug you."
 	  [/message]
 	  [move_unit]
@@ -126,43 +142,43 @@
 		[/move_unit]
 		{REPLACE_SCENARIO_MUSIC love_theme.ogg}
 		[message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"(he hugged Clare and gave her a kiss)It is ... you are so cold. You are probably ill. You should rest."
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"Yes, I should."
 	  [/message]
 	  [message]
-	    id=Merissa
+	    speaker=Merissa
 	    message=_"(whispers) He loves you. It is cute."
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"(whispers) What are you talking about? We are friends from our childhood."
 	  [/message]
 	  [message]
-	    id=Merissa
+	    speaker=Merissa
 	    message=_"(whispers) Maybe but I can see it on him, you can't?"
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"Do you love me, Lemyr?"
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"What? Ehhm to be honest yes. I have loved you for a long time but I could not say it. Alas I expected nothing from you."
 	  [/message] # he loved her for the years before this campaign begun
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"I love you too, Lemyr. I do not know how it happened but it is true."
 	  [/message] # I don't know it as well yet but the things sometime happend
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"It is the happiest day of my life."
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"Of mine too. I do not want to leave you again."
 	  [/message]
 	  # give her back her village soldiers and villagers
