--- a/For_Power/scenarios/17b_Am_I_welcomed_at_home.cfg
+++ b/For_Power/scenarios/17b_Am_I_welcomed_at_home.cfg
@@ -68,23 +68,23 @@
 		  to_y=15,18,18,20,22,24
 		[/move_unit]
 		[message]
-	    id=Lemyr
-	    message=_"Who is it?"
+	    speaker=Lemyr
+	    message=_"Hm, it seems that this night will be just calm as the other ones this month. But I wonder what could happen to Clare. She is gone for too long. I hope that ... Wait, someone is sneaking around the village. Who is it?"
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"It is me, Clare."
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"Thanks be to the gods. I thought that you were dead."
 	  [/message] # actually she is dead in every case
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"May I enter the village?"
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"You know that you do not need to ask. Come to me, please."
 	  [/message]
 	  [move_unit]
@@ -93,27 +93,27 @@
 		  to_y=31
 		[/move_unit]
 		[message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"I am here."
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"I missed you. You were away for a long time."
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"I am sorry. But the orc is history."
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"That is good news. I was worried that some harm had come to you."
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"That is nice but you do not have to worry about me. I am a mage, you know."
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"I will worry about you. You are my best friend."
 	  [/message]
 	  [unstore_unit]
@@ -127,67 +127,67 @@
 	  [/unstore_unit]
 	  {CLEAR_VARIABLE merissa_store}
 	  [message]
-	    id=Merissa
+	    speaker=Merissa
 	    message=_"We finally found you."
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"What are these bandits doing here? And how do they know you, Clare?"
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"I met them on my way to Haldar. They helped me. They are not as bad as they seem."
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"Ok. So what do you want?"
 	  [/message]
 	  [message]
-	    id=Tinry
+	    speaker=Tinry
 	    message=_"We wanted to say hello to Clare and ask how she is."
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"I am fine. But did you really travel to here just to say hello?"
 	  [/message]
 	  [message]
-	    id=Merissa
+	    speaker=Merissa
 	    message=_"We haven't seen you since you visited Haldar. We wanted to make sure that you are ok."
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"I am ok."
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"Why should she not be ok? Is something wrong with Haldar?"
 	  [/message]
 	  [message]
-	    id=Merissa
+	    speaker=Merissa
 	    message=_"He doesn't have a good reputation, even among the outlaws. I don't know the hard facts."
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"What did you hear?"
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"It does not matter. I am fine."
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"If you say so. But what of you, bandits? What are you going to do?"
 	  [/message]
 	  [message]
-	    id=Tinry
+	    speaker=Tinry
 	    message=_"May we rest in your village for a short time?"
 	  [/message]
 	  [message]
-	    id=Lemyr
+	    speaker=Lemyr
 	    message=_"You helped Clare so you may. But I am watching you."
 	  [/message]
 	  [message]
-	    id=Tinry
+	    speaker=Tinry
 	    message=_"Thank you."
 	  [/message]
 	  # give her back her village soldiers and villagers
