--- a/For_Power/utils5/cave.cfg
+++ b/For_Power/utils5/cave.cfg
@@ -125,6 +125,7 @@
 		kill=no
 	[/store_unit]
 	{FOREACH gifted.modifications.object i}
+  # wmlxgettext: [while]
 	[if]
 		[variable]
 			name=gifted.modifications.object[$i].sort
