wescamp.py: Update from add-on server

--- a/For_Power/utils5/cave.cfg
+++ b/For_Power/utils5/cave.cfg
@@ -126,6 +126,7 @@
 	[/store_unit]
 	{FOREACH gifted.modifications.object i}
   # wmlxgettext: [while]
+  # wmlxgettext: [do]
 	[if]
 		[variable]
 			name=gifted.modifications.object[$i].sort
